delete draft and add asset

--- a/Mining-Bot-Alpha-Version/Use-Mining-Bot-For-Mining/挖矿机器人使用说明书.md
+++ b/Mining-Bot-Alpha-Version/Use-Mining-Bot-For-Mining/挖矿机器人使用说明书.md
@@ -5,5 +5,31 @@ sort: 2
 
 # 挖矿机器人使用说明书
 
-## 介绍
+## 页面介绍
 
+
+## 公开数据页面
+
+
+
+## 钱包页面
+
+### 比特币与Stacks地址在线生成
+
+``` 
+npx @stacks/cli make_keychain -t
+```
+
+```
+{
+  "mnemonic": "exhaust spin topic distance hole december impulse gate century absent breeze ostrich armed clerk oak peace want scrap auction sniff cradle siren blur blur",
+  "keyInfo": {
+    "privateKey": "2033269b55026ff2eddaf06d2e56938f7fd8e9d697af8fe0f857bb5962894d5801",
+    "address": "STTX57EGWW058FZ6WG3WS2YRBQ8HDFGBKEFBNXTF",
+    "btcAddress": "mkRYR7KkPB1wjxNjVz3HByqAvVz8c4B6ND",
+    "index": 0
+  }
+}
+```
+
+## 客户端页面
