add import address pic

--- a/Mining-Bot-Alpha-Version/Use-Mining-Bot-For-Mining/挖矿机器人使用说明书.md
+++ b/Mining-Bot-Alpha-Version/Use-Mining-Bot-For-Mining/挖矿机器人使用说明书.md
@@ -66,10 +66,21 @@ npx @stacks/cli make_keychain -t
 
 
 ### 比特币与Stacks地址导入
-
-![](assets/CN/wallet/walletModule.png)
 点击钱包账户页面中的**添加账户**一栏，会弹出导入地址的对话框，将24个助记词按照拷贝粘贴至对话框中（助记词之间用空格隔开），并选择相应类型，便可完成地址导入。
 
-![](assets/CN/wallet/inputSeed.png)
+在钱包账户页面中点击**添加账户**：
+
+![](assets/CN/wallet/importAddress1.png)
+
+将24个助记词按照拷贝粘贴至对话框中（助记词之间用空格隔开），并选择账户类型，点击提交：
+
+![](assets/CN/wallet/importAddress2.png)
+
+可以在列表中看到新增的地址，以及其对应的类型与账户余额。
+
+![](assets/CN/wallet/importAddress3.png)
 
 ## 客户端页面
+
+![](assets/CN/client/clientModule.png)
+
