add User Guide CN

--- a/Mining-Bot-Alpha-Version/Use-Mining-Bot-For-Mining/挖矿机器人使用说明书.md
+++ b/Mining-Bot-Alpha-Version/Use-Mining-Bot-For-Mining/挖矿机器人使用说明书.md
@@ -82,5 +82,36 @@ npx @stacks/cli make_keychain -t
 
 ## 客户端页面
 
-![](assets/CN/client/clientModule.png)
+进入客户端界面的时候，会看到**挖矿操作面板**与**挖矿信息**两个面板。如果你是第一次进入客户端，你会看到当前状态显示为**无节点运行**
 
+![](assets/CN/client/clientPage.png)
+
+### 开始挖矿
+
+点击**挖矿操作面板**的**开始挖矿**，弹出如下图所示的账户选择对话框。此处账户列表为钱包页面中导入的BTC地址列表，如果你没有在钱包页面导入过地址，无法继续挖矿。
+
+![](assets/CN/client/startMining1.png)
+
+选择账户后，请设置燃烧量，燃烧单位为比特币最小单位，聪（Satoshi）。选择合适的燃烧量并点击完成。
+
+![](assets/CN/client/startMining2.png)
+
+如果账户余额充足，会显示挖矿程序正在运行：
+
+![](assets/CN/client/startMining3.png)
+
+如果账户余额不充足，会显示余额提醒，需要去充值比特币：
+
+![](assets/CN/client/balanceNotification.png)
+
+### 停止挖矿
+
+当前状态显示有进程正在运行时可以点击**停止挖矿**，当状态刷新至无节点运行时，表示节点停止成功：
+
+![](assets/CN/client/stopMining.png)
+
+### 矿工信息
+
+下图显示了矿工地址对应的出块数量、参与挖矿数量、以及总共燃烧比特币的数量统计。该信息对于设置燃烧量有一定参考价值。
+
+![](assets/CN/client/minerInfo.png)
